Mobile layout bug fix

--- a/designEcoWrap.css
+++ b/designEcoWrap.css
@@ -1,10 +1,18 @@
 
 
 body {
-    font-family: 'Lexend Deca';
-    margin: 30px;
-    background-color: #a0ae67;
-    color: white;
+  font-family: 'Lexend Deca';
+  margin: 0;
+  background-color: #a0ae67;
+  color: white;
+
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+    padding: 30px;
 }
 
 .header {
@@ -19,14 +27,12 @@ body {
 
 
 .footer {
-    background-color: #394430;
-    text-align: center;
-    color: white;
-    padding: 2px;
-    position: fixed;   /* Sticks to the viewport */
-    bottom: 0;         /* Align to bottom */
-    left: 0;
-    width: 100%;
+  background-color: #394430;
+  text-align: center;
+  color: white;
+  padding: 10px;
+  width: 100%;
+  margin-top: auto;
 }
 
 .prettyButton {
